# Project-FreeGen

./: .gitignore  CMakeLists.txt  README.md
include/: ICaptureBackend.hpp  ImGuiHandler.hpp  LinuxCaptureBackend.hpp  PipeWireHandler.hpp  PortalHandler.hpp  VulkanHandler.hpp
src/: ImGuiHandler.cpp  LinuxCaptureBackend.cpp  PipeWireHandler.cpp  PortalHandler.cpp  VulkanHandler.cpp  main.cpp
